--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root{
+  --main-color:#0aad0a;
+  --rating-color:#ffc908;
+}
+.cursor-pointer
+{
+    cursor: pointer;
+}
+.border-main {
+  border: #22db14 1px solid;
+}
+.star{
+  color: var(--rating-color);
+  transition: all 0.5s;
+}
+.product:hover{
+  border: 2px solid var(--main-color);
+}
+.product:hover button{
+  transform: translateY(-5%);
+
+}
+.product button{
+  transition: all 0.5s;
+  transform: translateY(150%);
+}
+.product .name{
+  color: rgb(180, 223, 114);
+}
+
+.a{
+  text-decoration: none;
+}
+a{
+  text-decoration: none;
+}
+.a h4,
+.a span{
+  color: rgba(0, 0, 0, 0.7);
+}
+
+
+.text-main
+{
+    color: var(--main-color);
+}
+
+.bg-main
+{
+    background-color: var(--main-color) !important;
+}
+
+.no-product {
+  margin-top: 30px !important;
+}
+
+.category{
+  transition: all 0.5s;
+}
+.category:hover{
+  -webkit-box-shadow: -1px 2px 13px 2px rgba(52,238,28,0.56); 
+  box-shadow: -1px 2px 13px 2px rgba(52,238,28,0.56);
+
+}
+
+.wishlist{
+  background-color: #F8F9FA;
+}
+
+.text-hover:hover{
+  color: var(--main-color) !important; 
+}
